# oml-game

./: Cargo.toml  Justfile  README.md  build.rs
src/: app.rs  game.rs  lib.rs  math.rs  renderer.rs  system.rs  telemetry.rs  window.rs
src/math/: cardinals.rs  circle.rs  matrix22.rs  matrix32.rs  matrix33.rs  matrix44.rs  matrix44stack.rs  rectangle.rs  vector2.rs  vector3.rs  vector4.rs
src/renderer/: animated_texture.rs  blend_factor.rs  color.rs  debug.rs  debug_renderer.rs  effect.rs  effect_id.rs  font.rs  material.rs  program.rs  sixteen_segment.rs  text_layout.rs  texture.rs  texture_atlas.rs  uniform.rs
src/system/: audio_fileloader_system.rs  data.rs  filesystem.rs  filesystem_archive.rs  filesystem_disk.rs  filesystem_empty.rs  filesystem_layered.rs  filesystem_memory.rs  filesystem_stream.rs  filesystem_stream_archive.rs  filesystem_stream_disk.rs  filesystem_stream_empty.rs  filesystem_stream_memory.rs  serializer.rs
src/window/: window.rs  window_layout.rs  window_update_context.rs
