[package]
name = "oml-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
crc = "3.0.0"
derivative = "2.2.0"
dirs-next = "2.0.0"
glutin = "0.28.0"
image = "0.24.2"
lazy_static = "1.4.0"
regex = "1.5.6"


[build-dependencies]
gl_generator = "0.14.0"
