[package]
name = "oml-game"
version = "0.26.4-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Game foundation extracted from Fiiish-RS to remove boilerplate for future procjects."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-game"
repository = "https://github.com/AndreasOM/oml-game"
keywords = ["tools", "gamedev"]
categories = ["multimedia","game-development"]

[dependencies]
anyhow = "1.0.58"
backtrace = "0.3.66"
chrono = "0.4.19"
crc = "3.0.0"
derivative = "2.2.0"
derive-getters = "0.2.0"
dirs-next = "2.0.0"
glutin = "0.29.1"
image = "0.24.2"
oml-audio = "0.6.9-alpha"
once_cell = "1.14.0"
regex = "1.5.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
tracing = "0.1.36"


[build-dependencies]
gl_generator = "0.14.0"
